rtl: MiA mapping
Create a mapping from MiA stage behavior nodes to nodes in the instruction
progress graph. Visualize the mapped subgraphs along the stage definitions
in dumps.