@@ -18,7 +18,6 @@ package vadl.viam.passes.dummyPasses;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import javax.annotation.Nullable;
@@ -331,7 +330,7 @@ public class DummyMiaPass extends Pass {
    * </pre>.
    */
   private static Stage writeBack(Identifier ident, StageOutput memoryIr, RegisterTensor regFile) {
-    return new Stage(ident, writeBackBehavior(memoryIr, regFile), Collections.emptyList());
+    return new Stage(ident, writeBackBehavior(memoryIr, regFile), List.of());
   }
 
   private static Graph writeBackBehavior(StageOutput memoryIr, RegisterTensor regFile) {
@@ -340,7 +339,8 @@ public class DummyMiaPass extends Pass {
     var i1 = new MiaBuiltInCall(BuiltInTable.INSTRUCTION_WRITE, new NodeList<>(rd),
         MicroArchitectureType.instruction());
     i1.add(regFile);
-    beh.addWithInputs(i1); // TODO ?
+    var wr = new WriteStageOutputNode(null, i1);
+    beh.addWithInputs(wr);
     return beh;
   }
 
